--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p id="orderTotal"></p>
 
   <div class="product">
-   <img src="/img/backpack.png">
+   <img src="https://gkl4yx.mimo.run/img/backpack.png">
    <h3>Backpack</h3>
    <button
     onclick="addToCart(backpack)">Add
@@ -21,7 +21,7 @@
   </div>
 
   <div class="product">
-   <img src="/img/camera.png">
+   <img src="https://gkl4yx.mimo.run/img/camera.png">
    <h3>Camera</h3>
    <button
     onclick="addToCart(camera)">Add
